# Tarea_3_Programaci-n_IA_Victor_Porlan

./: README.md  app.py  iris_service.py  pyproject.toml
models/: model-knn.pck  model-logistic-regression.pck  model-svm.pck  model-tree.pck  scaler.pkl
utils/: exemple.py  serialization-models.py
